Fixed pipeline errors, updated evaluation metrics and refreshed report images.

--- a/notebooks/credit_default_prediction.ipynb
+++ b/notebooks/credit_default_prediction.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "a1fe6f11",
    "metadata": {},
    "outputs": [
@@ -1013,18 +1013,27 @@
     "test_clusters_km = kmeans.predict(X_test_preprocessed)\n",
     "\n",
     "# GMM\n",
-    "gmm = GaussianMixture(n_components=2, random_state=42)\n",
+    "gmm = GaussianMixture(n_components=3, random_state=42)\n",
     "gmm.fit(X_train_preprocessed)\n",
     "test_clusters_gmm = gmm.predict(X_test_preprocessed)\n",
     "\n",
-    "def get_cluster_accuracy(y_true, y_cluster):\n",
-    "    # Simple purity check for binary target vs clusters (mapping required for >2 clusters is complex, \n",
-    "    # so we just print distribution for k=3)\n",
-    "    df_res = pd.DataFrame({'Cluster': y_cluster, 'Target': y_true})\n",
-    "    print(df_res.groupby('Cluster')['Target'].value_counts(normalize=True))\n",
+    "def get_cluster_distribution(y_true, y_cluster, name=\"\"):\n",
+    "    # Rende tutto array e evita problemi di indice pandas\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_cluster = np.asarray(y_cluster)\n",
     "\n",
-    "print(\"\\nK-Means (k=3) Cluster Distribution vs Target:\")\n",
-    "get_cluster_accuracy(y_test, test_clusters_km)\n"
+    "    # Check di sicurezza\n",
+    "    assert len(y_true) == len(y_cluster), \"y_true e y_cluster hanno lunghezze diverse\"\n",
+    "\n",
+    "    df_res = pd.DataFrame({\"Cluster\": y_cluster, \"Target\": y_true})\n",
+    "\n",
+    "    print(f\"\\n{name}\")\n",
+    "    print(df_res.groupby(\"Cluster\")[\"Target\"].value_counts(normalize=True))\n",
+    "\n",
+    "\n",
+    "get_cluster_distribution(y_test, test_clusters_km, name=\"KMeans (k=3) distribution vs Target\")\n",
+    "get_cluster_distribution(y_test, test_clusters_gmm, name=\"GMM (k=3) distribution vs Target\")\n",
+    "\n"
    ]
   },
   {
